--- a/Desafio/Desafio.html
+++ b/Desafio/Desafio.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>To-Do</title>
 </head>
   <body>
@@ -10,7 +11,7 @@
       <fieldset>
         <legend>Adicionar Tarefa</legend>
         <label for="">Nome da Tarefa</label> <br>
-        <input type="text" id="idFrela" placeholder="Insira o nome da Tarefa">
+        <input type="text" maxlength="25" id="idFrela" placeholder="Insira o nome da Tarefa">
         <input type="submit" value="Adicionar" id="butaumEnviar">
       </fieldset>
     </form>
