--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Desafios abaixo</h1>
 
-<a href="/Desafio/Desafio.html">To-Do List</a>
+<a href="./Desafio/Desafio.html">To-Do List</a>
 </body>
 </html>
