Refactor contact edit dialog and styles

--- a/Desafio/Desafio 2.0/index.html
+++ b/Desafio/Desafio 2.0/index.html
@@ -73,10 +73,10 @@
   </div>
 
 
-  <dialog id="modal">
+  <dialog id="modal" class="modalContato">
     <form id="formEditContact">
       <fieldset>
-        <legend>Editar contato</legend>
+        <legend id="legenda">Editar contato</legend>
         <label>Nome do Contato</label>
         <input type="text" id="editNameContact" placeholder="Tony Stark"><br><br>
         <label>Email do Contato</label>
