Refactor contact edit dialog and styles

--- a/Desafio/Desafio 2.0/index.html
+++ b/Desafio/Desafio 2.0/index.html
@@ -59,14 +59,12 @@
       <div class="manage-tags">
         <h3>Manage Tags</h3>
         <form>
-          <label for="new-tag">New Tag</label>
+          <label>New Tag</label>
           <input type="text" id="new-tag" name="newTag">
           <button type="submit" id="addTag">Add Tag</button>
         </form>
         <div class="existing-tags" id="tagList">
-          <span class="tag">Work</span>
-          <span class="tag-icon">&#9998;</span>
-          <span class="tag-icon">&#128465;</span>
+         
         </div>
       </div>
     </div>
