--- a/Desafio/Desafio 2.0/index.html
+++ b/Desafio/Desafio 2.0/index.html
@@ -14,7 +14,8 @@
 <body>
   <div class="container">
     <div class="contacts">
-      <h2>Contacts</h2>
+      <h2>Contatos</h2>
+      <h4><span id="totalContatos">15</span> Contatos cadastrados</h4>
       <div class="filter">
         <button><i class='bx bx-filter-alt bx-sm' id="iconFilter"></i></button>
         
@@ -46,22 +47,23 @@
       </div> 
     </div>
     <div class="new-contact">
-      <h2>Add New Contact</h2>
+      <h2>Adicionar novo Contato</h2>
       <form>
-        <label for="name">Name</label>
+        <label for="name">Nome</label>
         <input type="text" id="contactName" name="name">
         <label for="email">Email</label>
         <input type="email" id="contactEmail" name="email">
-        <label for="phone">Phone</label>
+        <label for="phone">Telefone</label>
         <input type="text" id="contactPhone" name="phone">
-        <button type="submit" id="addContact">Add Contact</button>
+        <button type="submit" id="addContact">Adicionar</button>
       </form>
       <div class="manage-tags">
-        <h3>Manage Tags</h3>
+        <h3>Gerenciar Etiquetas</h3>
+        <h4><span id="totalEtiquetas">15</span> Etiquetas cadastradas</h4>
         <form>
-          <label>New Tag</label>
+          <label>Nova Etiqueta</label>
           <input type="text" id="new-tag" name="newTag">
-          <button type="submit" id="addTag">Add Tag</button>
+          <button type="submit" id="addTag">Adicionar</button>
         </form>
         <div class="existing-tags" id="tagList">
          
@@ -82,6 +84,7 @@
         <label>Telefone do Contato</label>
         <input id="editPhoneContact" type="text" placeholder="11 5555-5555"><br><br>
         <button type="submit" id="saveEditContact">Salvar</button>
+        <button type="submit" id="cancelEditContact">Cancelar</button>
       </fieldset>
     </form>
   </dialog>
