--- a/Integração ClickUP/index.html
+++ b/Integração ClickUP/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task Manager</title>
   <link rel="stylesheet" href="./style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -14,57 +16,28 @@
     <h1>Task Board</h1>
 
     <div class="task-board" id="board-geral">
-      <!-- EM ANDAMENTO Section -->
-      <!-- <div class="task-section">
-        <h3>EM ANDAMENTO</h3>
-        <div class="task-item">
-          <span>Quero Solicitar um Reembolso - Pedro Sena</span>
-          <div class="assignee">
-            <span></span>
-            <span class="due-date">Due: Sep 10</span>
-          </div>
-          <span class="priority high-priority">High</span>
-        </div>
-        <div class="task-item">
-          <span>Não recebi minha Fatura - Thiago Rocha</span>
-          <div class="assignee">
-            <span></span>
-            <span class="due-date">Due: Sep 16</span>
-          </div>
-          <span class="priority high-priority">High</span>
-        </div>
-        <div class="task-item">
-          <span>Quero Solicitar um Reembolso - Lucas Müller</span>
-          <div class="assignee">
-            <span></span>
-            <span class="due-date">Due: Sep 17</span>
-          </div>
-          <span class="priority high-priority">High</span>
-        </div>
-      </div> -->
-
-      <!-- TO DO Section -->
-      <!-- <div class="task-section">
-        <h3>TO DO</h3>
-        <div class="task-item">
-          <span>Quero Solicitar um Reembolso - comercial@vall...</span>
-          <div class="assignee">
-            <span></span>
-            <span class="due-date">Due: Sep 10 (4 days ago)</span>
-          </div>
-          <span class="priority low-priority">Normal</span>
-        </div>
-        <div class="task-item">
-          <span>Outro Assunto - Leonardo Cardoso</span>
-          <div class="assignee">
-            <span></span>
-            <span class="due-date">Due: Sep 17</span>
-          </div>
-          <span class="priority high-priority">High</span>
-        </div>
-      </div>
-    </div> -->
+      <span class='bx bx-edit bx-xs'><span/>
+      <span class='bx bx-trash bx-xs' ><span/>
+      
   </div>
+
+  <dialog>
+    <form id="formEditTarefa">
+      <fieldset>
+        <legend>Editar Tarefa</legend>
+        <label>Nome da Tarefa</label>
+        <input type="text" id="inputNomeTarefa" placeholder="Nome da tarefa">
+        <label>Descrição</label>
+        <textarea id="inputDescricaoTarefa" placeholder="Descrição da tarefa"></textarea>
+        <label>Prioridade</label>
+        <select id="inputPrioridadeTarefa">
+          <option value="1">🟢 Low</option>
+          <option value="2">🔵 Normal</option>
+          <option value="3">🟠 High</option>
+          <option value="4">🔴 Urgent</option>
+      </fieldset>
+    </form>
+  </dialog>
 
   <script src="script.js"></script>
 </body>
